[package]
name = "gone"
version = "0.1.0"
authors = ["Albert Liu <albertymliu@gmail.com>"]
edition = "2018"

[dependencies]
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
hashbrown = { version = "0.9.1", features = ["serde"] }
siphasher = "0.3.3"
unicode-width = "0.1.7"
static_assertions = "1.1.0"
wee_alloc = { version = "0.4.5" }
peg = { path = "lib/rust-peg" }

[dev-dependencies]
interloc = "0.1.3"
