[package]
name = "gone"
version = "0.1.0"
authors = ["Albert Liu <albertymliu@gmail.com>"]
edition = "2018"

[dependencies]
lazy_static = { version = "1.4.0" }
# serde = { version = "1.0", default-features = false, features = ["derive"] }
# serde_json = { version = "1.0" }
peg = { path = "lib/peg" }
codespan-reporting = "0.11.1"
unescape = "0.1.0"
